--- a/configs/caption.yaml
+++ b/configs/caption.yaml
@@ -4,7 +4,7 @@ coco:
   label_path: '/workspace_dataset/dataset_experts'
   experts: ['depth', 'normal', 'seg_coco', 'edge', 'obj_detection', 'ocr_detection']  # 'none' for PrismerZ
   image_resolution: 480
-  prismer_model: 'prismer_base'
+  prismer_model: 'prismer_base'  # 'prismer-large' for Prismer(Z)-Large
   freeze: 'freeze_vision'
 
   batch_size_train: 4  # for 8 * 8 nodes [effective batch-size: 256]
@@ -23,7 +23,7 @@ nocaps:
   experts: ['depth', 'normal', 'seg_coco', 'edge', 'obj_detection', 'ocr_detection']  # 'none' for PrismerZ
 
   image_resolution: 480
-  prismer_model: 'prismer_base'
+  prismer_model: 'prismer_base'  # 'prismer-large' for Prismer(Z)-Large
   freeze: 'freeze_vision'
 
   batch_size_train: 4  # for 8 * 8 nodes [effective batch-size: 256]
@@ -42,7 +42,7 @@ demo:
   experts: ['depth', 'normal', 'seg_coco', 'edge', 'obj_detection', 'ocr_detection']  # 'none' for PrismerZ
 
   image_resolution: 480
-  prismer_model: 'prismer_base'
+  prismer_model: 'prismer_base'  # 'prismer-large' for Prismer(Z)-Large
   freeze: 'freeze_vision'
 
   prefix: 'A picture of'
