--- a/configs/pretrain.yaml
+++ b/configs/pretrain.yaml
@@ -9,7 +9,7 @@ label_path: '/workspace_dataset/dataset_experts'
 experts: ['depth', 'normal', 'seg_coco', 'edge', 'obj_detection', 'ocr_detection']    # 'none' for PrismerZ
 
 image_resolution: 224
-prismer_model: 'prismer_base'
+prismer_model: 'prismer_base'  # 'prismer-large' for Prismer(Z)-Large
 freeze: 'freeze_lang_vision'
 batch_size_train: 32  #   for 4 * 8 nodes [effective batch-size: 1024]
 
