--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+torch
 git+https://github.com/openai/CLIP.git
 git+https://github.com/facebookresearch/detectron2.git@5aeb252b194b93dc2879b4ac34bc51a31b5aee13
 accelerate
@@ -13,3 +14,7 @@ pyclipper
 yacs
 pycocotools
 geffnet
+fire
+huggingface_hub
+rich
+gradio
