--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 git+https://github.com/openai/CLIP.git
 git+https://github.com/facebookresearch/detectron2.git@5aeb252b194b93dc2879b4ac34bc51a31b5aee13
-accelerate
+accelerate==0.15.0
 fairscale
 timm
-transformers
+transformers==4.26.1
 einops
 scikit-learn==0.24.2
 pycocoevalcap
