--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
-git+https://github.com/openai/CLIP.git
 git+https://github.com/facebookresearch/detectron2.git@5aeb252b194b93dc2879b4ac34bc51a31b5aee13
-accelerate==0.15.0
-fairscale
-timm
-transformers==4.26.1
-einops
+git+https://github.com/openai/CLIP.git@a9b1bf5
+gradio~=3.24.1
+torch~=2.0.0
+einops~=0.4.1
+transformers~=4.26.1
+numpy~=1.21.5
+pillow~=9.2.0
+torchvision~=0.15.1
+opencv-python-headless==4.7.0.72
+timm~=0.6.12
+matplotlib~=3.7.1
+pycocotools~=2.0.4
 scikit-learn==0.24.2
-pycocoevalcap
-editdistance
-shapely
-pyclipper
-yacs
-pycocotools
-geffnet
-fire
-huggingface_hub
-rich
-ruamel.yaml
+yacs~=0.1.8
+pyclipper~=1.3.0.post3
+shapely~=1.7.1
+editdistance~=0.6.0
+accelerate~=0.15.0
+pycocoevalcap~=1.2
+ruamel.yaml==0.17.21
+rich~=13.3.2
+fire~=0.4.0
